All_Component_DX/force-app/main/default/objects/Travel_Policy__c/Travel_Policy__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Travel Policy for covered travel services</description>
    <label>Travel Policy</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>