All_Component_DX/force-app/main/default/objects/Travel_Policy__c/fields/Named_Expression__c.field-meta.xml
<CustomField>
    <fullName>Named_Expression__c</fullName>
    <formula>Service__r.Qualifying_Criteria__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Rule</label>
    <type>Text</type>
</CustomField>