All_Component_DX/force-app/main/default/objects/Travel_Policy__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Travel Policy</relationshipLabel>
    <relationshipName>Travel_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>